// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwoFactorAuthSettings render should render the initial state of the component 1`] = `
<div>
  <v-form>
    <label
      class="label"
    >
      Two Factor Authentication via OTP
    </label>
     
    <v-button
      classname="is-primary is-medium"
      disabled="true"
    >
      
      Disable Two Factor Auth
    
    </v-button>
  </v-form>
   
  <!---->
</div>
`;

exports[`TwoFactorAuthSettings render should show modal window for two factor auth 1`] = `
<div>
  <v-form>
    <label
      class="label"
    >
      Two Factor Authentication via OTP
    </label>
     
    <v-button
      classname="is-primary is-medium"
      disabled="true"
    >
      
      Disable Two Factor Auth
    
    </v-button>
  </v-form>
   
  <two-factor-auth-modal
    email="email"
  />
</div>
`;
